More structured dataloader, developed taskB